--- a/client/package.json
+++ b/client/package.json
@@ -2,10 +2,24 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": {
+    "/auth/google": {
+      "target": "http://localhost:4111"
+    },
+    "/auth/facebook": {
+      "target": "http://localhost:4111"
+    },
+    "/api/*": {
+      "target": "http://localhost:4111"
+    }
+  },
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.17",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
