--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0",
+    "redux-form": "^7.2.0",
     "redux-thunk": "^2.2.0"
   }
 }
