--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "concurrently": "^3.5.1",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
+    "moment": "^2.21.0",
     "mongodb": "^3.0.1",
     "mongoose": "^4.13.6",
     "nodemon": "^1.12.5",
